k8s/images/image-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: image-server
  namespace: pfe
spec:
  selector:
    app: image-server
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: images-ingress
  namespace: pfe
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: images.exemple.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: image-server
                port:
                  number: 8080
