k8s/images/images_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: images-ingress
  namespace: pfe
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "traefik"
spec:
  tls:
    - hosts:
        - images.example.com
      secretName: images-tls-cert
  rules:
    - host: images.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: image-server
                port:
                  number: 8080
